--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -5,6 +5,8 @@
   </head>
   
   <body>
-      <p>The final cost is: <%= cost %></p>
+      <p>Mail Type: <%= typeofmail %></p>
+      <p>Weight: <%= weight %></p>
+      <p>Total Cost: <%= cost %></p>
   </body>
 </html>
